Fix scrollbar not visible behind the Start button

--- a/dart/books/bodega/egamebook.css
+++ b/dart/books/bodega/egamebook.css
@@ -145,17 +145,18 @@ nav div#stats a.display-none {
 div#book-title {
   background: white;
   width:100%;
-  height:100%;
+  height: 90%;
   z-index:1000;
   top:0;
   left:0;
-  overflow: scroll;
+  overflow-y: scroll;
   position: fixed;
 }
 
 div.bottom-fixed {
   position: fixed;
-  height: 6em;
+  height: 10%;
+  min-height: 4em;
   bottom: 0;
   right: 0;
   left: 0;
@@ -168,7 +169,7 @@ div#book-about {
 
 div.bottom-fixed > div {
   max-width: 40em;
-  padding: 1em 1em 0;
+  padding: 0.5em 1em 0;
   margin: 0 auto;
 }
 
